--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
+#background{
+  background-image: url("/home.png");
+  background-size: cover;
+  filter: grayscale(100%)
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section{
+  min-height: 80vh
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading {
+  font-size: 5vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.content {
+  font-size: 3vh;
+}
+.sectionHeader {
+  padding-top: 10vh
+}
+#homepage {
+  font-family: Lato !important;
+  font-weight: 300 !important;
+}
+#section3 {
+  background-color: rgb(25,25,25);
+}
+#home{
   color: white;
+  min-height: 100vh;
+  padding-top: 20vh
+}
+.downlink{
+  animation: bounce 2s infinite;
 }
 
-.App-link {
-  color: #61dafb;
+.Typist .Cursor {
+  display: inline-block; }
+  .Typist .Cursor--blinking {
+    opacity: 1;
+    animation: blink 1s linear infinite; }
+
+.projectIcon {
+  max-height: 10vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  40% {
+    transform: translateY(-30px);
   }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+
+#container {
+  position: relative;
+  margin-top: 50px;
+  display: inline-block;
+  width: 60vh;
+  height: 45vh;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
+}
+
+#container:hover .overlay {
+  display: block;
+  background: rgba(0, 0, 0, .3);
+}
+#section5{
+  background: lightgray;
+}
+#img {
+  position: absolute;
+  width: 60vh;
+  height: 45vh;
+  left: 0;
+}
+
+.title {
+  position: absolute;
+  width: 500px;
+  left: 0;
+  top: 5vh;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  z-index: 1;
+  opacity: 0;
+  transition: top .5s ease;
+}
+
+#container:hover .title {
+  top: 10vh;
+  opacity: 1;
+}
+
+.button {
+  position: absolute;
+  width: 500px;
+  left:0;
+  top: 30vh;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .35s ease;
+}
+
+.button a {
+  width: 200px;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+}
+
+#container:hover .button {
+  opacity: 1;
 }
