--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,17 @@
 .heading {
   font-size: 5vh;
 }
+.lato {
+  font-family: Lato !important;
+  font-weight: 300 !important;
+}
 .content {
   font-size: 3vh;
 }
 .sectionHeader {
   padding-top: 10vh
 }
-#homepage {
-  font-family: Lato !important;
-  font-weight: 300 !important;
-}
+
 #section3 {
   background-color: rgb(25,25,25);
 }
@@ -67,15 +68,18 @@
 
 #container {
   position: relative;
-  margin-top: 50px;
+  margin-top: 10vh;
   display: inline-block;
   width: 60vh;
   height: 45vh;
+  margin-right: 2vh;
 }
 .overlay {
   position: absolute;
-  top: 0;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
@@ -91,23 +95,20 @@
 }
 #img {
   position: absolute;
-  width: 60vh;
+  max-width: 60vh;
   height: 45vh;
-  left: 0;
+  left:0;
 }
 
 .title {
   position: absolute;
-  width: 500px;
-  left: 0;
+  width: 50vh;
   top: 5vh;
-  font-weight: 700;
-  font-size: 30px;
-  text-align: center;
   color: white;
   z-index: 1;
   opacity: 0;
   transition: top .5s ease;
+  left:5vh;
 }
 
 #container:hover .title {
@@ -125,7 +126,7 @@
   transition: opacity .35s ease;
 }
 
-.button a {
+.visit {
   width: 200px;
   padding: 12px 48px;
   text-align: center;
@@ -136,4 +137,12 @@
 
 #container:hover .button {
   opacity: 1;
+}
+@media only screen and (max-width: 600px) {
+  .title {
+    top: 0vh;
+  }
+  #container:hover .title{
+    top: 5vh;
+  }
 }
